# timbre

./: .env.example  .gitignore  README.md  run.md  sample answer.txt  setup.sh
ai-core/: .env.example  README.md  pyproject.toml
ai-core/src/: config.py  deps.py  main.py
ai-core/src/agents/: __init__.py  critique_agent.py  generator_agent.py  interview_agent.py  style_analyzer.py
ai-core/src/pipelines/: __init__.py  generate_pipeline.py  onboarding_pipeline.py  refine_pipeline.py
ai-core/src/prompts/: critique_system.md  generation_system.md  intent_router.md  interview_system.md  style_analysis.md
ai-core/src/providers/: __init__.py  base.py  gemini.py  groq.py  router.py
ai-core/src/rag/: __init__.py  assembler.py  retriever.py
ai-core/src/routes/: analyze.py  embed.py  generate.py  interview.py  transcribe.py
ai-core/src/schemas/: __init__.py  critique.py  generate.py  intent.py  voice_profile.py
ai-core/tests/: test_critique.py  test_pipelines.py  test_style_analyzer.py
backend/: .env.example  README.md  drizzle.config.ts  next.config.js  next.config.ts  package-lock.json  package.json
backend/src/db/: client.ts  rls.sql  schema.ts
backend/src/lib/: auth.ts  errors.ts  logger.ts  rate-limit.ts
backend/src/queue/: index.ts
backend/src/services/: ai-client.ts  (+3 more)
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  icon.tsx  layout.tsx
frontend/lib/: api-client.ts  auth-client.ts  space-store.ts  tweaks-store.ts  voice-hooks.ts
ops/scripts/: seed.sh
(+40 files in other folders)
